fixing alignment

--- a/assets/less/reece-products.less
+++ b/assets/less/reece-products.less
@@ -855,8 +855,12 @@ LocationDropDown
 @media (max-width:767px){
 	.breadcrumb > li.locationAnSearch{
 		display: block;
+		text-align: right;
 		margin:5px 0 0;
 		padding-top: 5px;
 		clear: both;
+		*{
+			text-align: left
+		}
 	}
 }
